[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/battle/soul.png" type="Texture" id=1]
[ext_resource path="res://objects/battle/player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 17, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 17, 18 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 17, 18 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "invincible"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "neutral"

[node name="hitbox" type="Area2D" parent="." groups=["player_hitbox"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="invincibility" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 2 )
anims/invincible = SubResource( 3 )

[node name="heal_time" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="invincibility" to="." method="_on_invincibility_timeout"]
[connection signal="timeout" from="heal_time" to="." method="_on_heal_time_timeout"]
